--- a/arduino.html
+++ b/arduino.html
@@ -1,6 +1,3 @@
-
-
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -30,7 +27,7 @@ body, html {
     background-position: center;
     background-size: cover;
     background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
-    min-height: 75%;
+    min-height: 60%;
 }
 .menu {
     display: none;
@@ -56,10 +53,10 @@ body, html {
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
 <!-- //////////////////////////Top menu////////////////////////// -->
 <style>
-.topnav {overflow: hidden; background-color: #19273C;}
+.topnav {overflow: hidden; background-color:rgb(0, 0, 0);}
 .topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
-.topnav a:hover {background-color: #223A2C; color: white;}
-.topnav a.active {background-color: #72c494; color: #D4EDDE;}
+.topnav a:hover {color: white;}
+.topnav a.active {color: #D4EDDE;}
 .topnav .icon {display: none;}
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
@@ -70,7 +67,7 @@ body, html {
   .topnav.responsive a {float: none; display: block; text-align: left;}}
 </style>
 <div class="topnav" id="myTopnav">
-  <a href="https://alexandroshub.github.io" class="active"  id="home"><b> Alexandros</b>Hub</a>
+  <a href="https://alexandroshub.github.io" class="active"  id="home"><img src= "https://64.media.tumblr.com/5bda3cb7ce87ed9de69c85af725ebe78/f06bf6e1e4ca1249-32/s500x750/68ec78a36cb70324f7aa6a0d7657b46926fc44b2.png" style="width:28px;"></a>
   <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
   <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
   <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
@@ -87,20 +84,41 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
+
+<style>
+#blackgrady {
+  height: 100px; background-image: linear-gradient(to top, rgba(255,0,0,0),rgba(0,0,0,0.7), rgba(0,0,0,1));
+}</style><div id="blackgrady"></div>
+
+
 <div class="w3-display-topright w3-padding-large w3-xlarge w3-text-white">
-<img src= "https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" style="width:50px;" alt="Papaspyrou Alexandros"></div>
+
+
+<a href="https://discord.gg/CBTHyP"><img src= "https://images-na.ssl-images-amazon.com/images/I/41ejs0MmaSL.png" style="width:50px;" alt="Chat about Arduino" title="Chat about Arduino on discord!"></a>
+
+<img src= "https://cdn.icon-icons.com/icons2/1451/PNG/512/codefolder_99364.png" style="width:50px;" alt="portfolio" title="Arduino Projects"></a>
+
+</div>
 	<div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
 	<span class="w3-tag">By: Papaspyrou Alexandros</span> 
 	</div>
   <div class="w3-display-middle w3-center">
 
-	<span class="w3-text-white w3-hide-small" style="font-size:130px">#arduino</span>
-    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">#arduino</span>
+	<span class="w3-text-white w3-hide-small" style="font-size:130px">arduino</span>
+    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">arduino</span>
 
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">@portfolio</span>
+    <span class="w3-text-white">Projects</span>
   </div>
+  
+   <br><br><br><br><br><br><br>
+  <style>
+#whitegrady {
+  height: 50px; background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(247,245,242,1));
+}</style>
+<div id="whitegrady"></div>
+
 </header>
 
 <!-- Add a background color and large text to the whole page -->
@@ -197,7 +215,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
     <p><strong>και μή ξεχνάτε.</strong> Αν θέλετε να μοιραστείτε την άποψη σας για το θέμα, ή να προτείνετε κάτι ακόμα, μπορείτε να μας γράψετε στο messenger. </p>
     
   </div>
-</div>
+</div></div></div>
  </div>
 <!-- 
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
