--- a/iotHome.html
+++ b/iotHome.html
@@ -1,5 +1,5 @@
 
-<!-- SpecialPage iotMain V. 23.10.20
+<!-- SpecialPage iotMain V. 01.05.20
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -30,12 +30,13 @@ body, html {
     background-position: center;
     background-size: cover;
     background-image: url("https://64.media.tumblr.com/6f0c0b35f9f3da8183855ac1be8abb8f/tumblr_ou1xb2tPKd1si59zfo3_1280.jpg");
-    min-height: 60%;
+    min-height: 40%;
 }
 .menu {
     display: none;
 }
 </style>
+
 <body>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
 <!-- Load Facebook SDK for JavaScript -->
@@ -61,7 +62,7 @@ body, html {
 .topnav {overflow: hidden; background-color:rgb(0, 0, 0);}
 .topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
 .topnav a:hover {color: white;}
-.topnav a.active {background-color: #4B759B; color: #D4EDDE;}
+.topnav a.active {color: #D4EDDE;}
 .topnav .icon {display: none;}
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
@@ -73,7 +74,7 @@ body, html {
 </style>
 <div class="topnav" id="myTopnav">
 
-  <a href="https://alexandroshub.github.io" class="active"  id="home"><img src= "https://www4.lunapic.com/editor/working/160340117858478393?4151307686" style="width:28px;"></a>
+  <a href="https://alexandroshub.github.io" class="active"  id="home"><img src= "https://64.media.tumblr.com/5bda3cb7ce87ed9de69c85af725ebe78/f06bf6e1e4ca1249-32/s500x750/68ec78a36cb70324f7aa6a0d7657b46926fc44b2.png" style="width:28px;"></a>
   <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
   <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
   <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
@@ -97,8 +98,14 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 }</style><div id="blackgrady"></div>
   <div class="w3-display-middle w3-center">
 	<span class="w3-text-white w3-hide-small" style="font-size:130px">IOT</span>
-    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">IOT</span>
-  </div>
+    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">IOT</span> </div> 
+ <br><br><br><br><br><br><br>
+  <style>
+#whitegrady {
+  height: 50px; background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(255,255,255,1));
+}</style>
+<div id="whitegrady"></div>
+ 
 </header>
 
 
