--- a/raspberrypi.html
+++ b/raspberrypi.html
@@ -1,3 +1,4 @@
+
 <!-- SpecialPage raspberrypi _V.15.04.20
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -30,8 +31,8 @@ body, html {
 .bgimg {
     background-position: center;
     background-size: cover;
-    background-image: url("https://www.ecopetit.cat/wpic/mpic/124-1240714_raspberry-pi.jpg");
-    min-height: 65%;
+    background-image: url("https://wallpapercave.com/wp/wp1864217.jpg");
+    min-height: 40%;
 }
 </style>
 <body>
@@ -56,10 +57,10 @@ body, html {
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->
 <!-- //////////////////////////Top menu////////////////////////// -->
 <style>
-.topnav {overflow: hidden; background-color: #19273C;}
+.topnav {overflow: hidden; background-color:rgb(0, 0, 0);}
 .topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
-.topnav a:hover {background-color: #d9733b; color: black;}
-.topnav a.active {background-color: #72c494; color: white;}
+.topnav a:hover {color: white;}
+.topnav a.active {color: #D4EDDE;}
 .topnav .icon {display: none;}
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
@@ -70,11 +71,11 @@ body, html {
   .topnav.responsive a {float: none; display: block; text-align: left;}}
 </style>
 <div class="topnav" id="myTopnav">
-  <a href="https://alexandroshub.github.io" class="active"  id="home">Alexandros Hub</a>
-  <a href="https://alexandroshub.github.io/cv.html">AboutMe</a> 
-  <a href="https://alexandroshub.github.io/portfolio.html">Portfolio</a>
-  <a href="https://alexandroshub.github.io/plus.html">Plus</a> 
-  <a href="https://alexandroshub.github.io/contact.html">Contact</a>
+  <a href="https://alexandroshub.github.io" class="active"  id="home"><img src= "https://64.media.tumblr.com/5bda3cb7ce87ed9de69c85af725ebe78/f06bf6e1e4ca1249-32/s500x750/68ec78a36cb70324f7aa6a0d7657b46926fc44b2.png" style="width:28px;"></a>
+  <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
+  <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
+  <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
+  <a href="https://alexandroshub.github.io/contact.html"><i class="far fa-comment"></i>  &nbsp;Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -85,6 +86,10 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 <!-- //////////////////////////END of Top menu////////////////////////// -->
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
+<style>
+#blackgrady {
+  height: 100px; background-image: linear-gradient(to top, rgba(255,0,0,0),rgba(0,0,0,0.7), rgba(0,0,0,1));
+}</style><div id="blackgrady"></div>
 	<div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
 	<span class="w3-tag"></span> 
 	</div>
@@ -93,6 +98,12 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
     <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px"> raspberrypi</span>
  </div>
 <div class="w3-display-bottomright w3-center w3-padding-large"><a href="https://github.com/alexandroshub/python" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> My <font color="red"> <i class="fa fa-github-alt"></i>Projects</font></b></a></div>
+   <br><br><br><br><br><br><br>
+ <style>
+#whitegrady {
+  height: 50px; background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(247,245,242,1));
+}</style>
+<div id="whitegrady"></div>
 </header>
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
@@ -115,8 +126,15 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
     </div>
     <div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
       <h5></h5>
-  <p>
+  <p></p>
   <a href="#" class="w3-button w3-blue">xx</a>
+   <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide"> ΕΓΚΑΤΑΣΤΑΣΗ ΣΕ ΕΙΚΟΝΙΚΟ ΥΠΟΛΟΓΙΣΤΗ</span></h5>  
+<p>  Θα χρειαστούμε
+	α)το virtualbox
+https://www.virtualbox.org/wiki/Downloads
+	β) το λειτουργικό του raspberry για υπολογιστές https://www.raspberrypi.org/downloads/raspberry-pi-desktop/
+    * enable Virtualization
+
   </p>
             </div><br>
             <span class="w3-tag w3-red">Περισσότερα σύντομα!!</span>
