--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
   height: 50px; background-image: linear-gradient(to top, rgba(255,0,0,0), rgba(15,23,36,1));
 }</style><div id="footy"></div>
       <div class="w3-row">
-         <a href="#home"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a><br>
+         <p class="w3-tooltip">you have reached the end <br><span class="w3-text w3-tag"><a href="#home"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></span></p>
          <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Papaspyrou Alexandros" align="bottom">
          <style>div.a {font-size: 12px;}</style>
          <div class="a">
