--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,42 @@
-<!--
-░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
-▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
-▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
-Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ By: Alexandros Papaspyrou
--->
 <!DOCTYPE html>
+<html>
+ <title>Papaspyrou | Portfolio</title>
+
+	<meta http-equiv="Refresh" content="2;url=https://alexandroshub.github.io/prtflio.html">
+	
+<link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
+   <head>
+   	        <!--  /////// meta information  /////// -->
+      <meta charset="UTF-8">
+      <meta name="author" content="Alexandros Papaspyrou">
+      <meta name="description" content="Personal website of Papaspyrou Alexandros. All about IoT projects with arduino or raspberryPi, Automations, Robotics and more...">
+      <meta name="keywords" content="Automations, Programming , Technology">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <!--  /////// end of link and start style css /////// -->
+      <style>
+ body,h1,h2,h3,h4,h5,h6 {font-family: Arial, Helvetica,sans-serif}
+         body, html { height: 100%; line-height: 1.8;
+         background-color: #72c494; /* For browsers that do not support gradients */
+         background: linear-gradient(to top right, #19273c 0%,  #000 50%,  #19273c 100%)}  
+      </style>
+   </head>
+<body>
+ <div class="w3-display-middle w3-text-white">
+    <h1 class="w3-jumbo w3-animate-top w3-center"><b>Portfolio</b></h1><h1>alexandros<b>hub</b>.github.io</h1>
+</div>
+</body>
+</html>
+
+<!DOCTYPE html>
+
+<!--
 <html>
 <title>Papaspyrou | Portfolio</title>
 
-	<meta http-equiv="Refresh" content="2;url=https://alexandroshub.github.io/prtflio.html">
+	<meta http-equiv="Refresh" content="0.5;url=https://alexandroshub.github.io/prtflio.html">
 	
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
@@ -26,55 +53,8 @@ body, html { height: 100%; line-height: 1.8;}
 .menu {display: none;}
 </style>
 <body>
-<!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
-<!-- Load Facebook SDK for JavaScript -->
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/el_GR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<!-- Your customer chat code -->
-<div class="fb-customerchat"
-  attribution=setup_tool
-  page_id="1610585155641169"
-  theme_color="#72c494"
-  logged_in_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα."
-  logged_out_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα.">
-</div>
-<!--  ////////////////////////// messenger_platform  ////////////////////////// -->     
-<!-- //////////////////////////Top menu////////////////////////// -->
-<style>
-.topnav {overflow: hidden; background-color: #19273C;}
-.topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
-.topnav a:hover {background-color: #223A2C; color: white;}
-.topnav a.active {background-color: #72c494; color: #D4EDDE;}
-.topnav .icon {display: none;}
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {float: right; display: block;}}
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {position: absolute; right: 0; top: 0;}
-  .topnav.responsive a {float: none; display: block; text-align: left;}}
-</style>
-<div class="topnav" id="myTopnav">
-  <a href="https://alexandroshub.github.io" class="active"  id="home"><b>Alexandros</b>Hub</a>
-  <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
-  <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
-  <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
-  <a href="https://alexandroshub.github.io/contact.html"><i class="far fa-comment"></i>  &nbsp;Contact</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
-<script>
-function myFunction() {var x = document.getElementById("myTopnav"); if (x.className === "topnav") {x.className += " responsive";} else {x.className = "topnav";}}
-</script>
-<!-- //////////////////////////END of Top menu////////////////////////// -->
-<!-- Header with image -->
+
+<!-- Header with image - ->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
 <span class="w3-tag">*</span> 
@@ -115,10 +95,10 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 </header>
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-large">
-<!-- MAIN Section ///////////////////////////////////////////-->
+<!-- MAIN Section ///////////////////////////////////////////- ->
 <div class="w3-center w3-padding-16 w3-black">
 	<div class="w3-row-padding">
-<!-- 1 -->    
+<!-- 1 - ->    
 <div class="w3-col l3 m6 w3-margin-bottom">
   <div class="w3-display-container">
     <div class="w3-display-topleft w3-black w3-padding">Developing & Code</div>
@@ -129,7 +109,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
     <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" alt="Developing" style="width:100%"></a>
   </div>  
 </div>
-<!-- 2 --> 
+<!-- 2 - -> 
 <div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container">
 <a href="https://alexandroshub.github.io/portfolio.html#intro">
 <div class="w3-display-topleft w3-black w3-padding">Electronics & IoT</div>
@@ -138,7 +118,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
     <i class="fa fa-info"></i></div>
 	<script> function al2tFunction(){alert("Τί είναι ο Internet of Things? \n\n Το Internet of Things είναι μία έννοια που αφορά τα αντικείμενα της καθημερινότητας μας – από βιομηχανικές μηχανές μέχρι wearable συσκευές που χρησιμοποιούν ενσωματωμένους αισθητήρες για  τη συλλογή δεδομένων & την ανάληψη κάποιας δράσης σε αυτά μέσα σε ένα δίκτυο. Κάπως έτσι λειτουργεί ένα κτίριο που χρησιμοποιεί αισθητήρες (sensors) για την αυτόματη ρύθμιση της θέρμανσης ή του φωτισμού. Άλλο παράδειγμα είναι ο ένας εξοπλισμός παραγωγής που προειδοποιεί το προσωπικό συντήρησης για μία επικείμενη βλάβη. Με απλά λόγια το Internet of Things είναι το τεχνολογικό μέλλον που θα κάνει τη ζωή μας πιο εύκολη.\n\n Read More: https://robodayblog.wordpress.com/2016/05/30/iot-roboday");}</script>
 </div></div>
-<!-- 3 -->     
+<!-- 3 - ->     
 <div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container">
 <a href="https://alexandroshub.github.io/portfolio.html#intro">
 <div class="w3-display-topleft w3-black w3-padding">
@@ -148,7 +128,7 @@ Automations & Robotics</div>
 <i class="fa fa-info"></i></div>
 	<script> function al3tFunction(){alert("Αυτοματισμός\n\n Ο αυτοματισμός δεν είναι τίποτα άλλο παρά η εύρεση ενός αλγορίθμου για την επίλυση ενός προβλήματος, ή η κατασκευή ενός αυτόνομου μηχανισμού που εκτελεί αυτόν τον αλγόριθμο για κάποια είσοδο χωρίς ανθρώπινη παρέμβαση. \n\n Read More: https://robodayblog.wordpress.com ");}</script>
 </div></div>
-<!-- 4 --> 
+<!-- 4 - -> 
 <div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container">
 <a href="https://alexandroshub.github.io/portfolio.html#publications">
 <div class="w3-display-topleft w3-black w3-padding">
@@ -158,7 +138,7 @@ Files & Publications</div>
 <i class="fa fa-info"></i></div>
 	<script> function al4tFunction(){alert("Η συγκεκριμένη ενότητα θα είναι σύντομα διαθέσιμη");}</script>
 </div></div></div></div>
-<!-- Modal for full size images on click-->
+<!-- Modal for full size images on click- ->
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
   <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
   <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
@@ -205,11 +185,11 @@ Files & Publications</div>
   </div>
 <!--  **************************************************************** -->
 
-<!-- About Container -->
+<!-- About Container - ->
 <div class="w3-container"></div>
 <div class="w3-center w3-padding-64" id="intro"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Intro</span>
 <a href="#publications" class="w3-button w3-dark-grey"><i class="fa fa-arrow-down"></i></a></div>    
-<!-- Promo Section - "We know design" -->
+<!-- Promo Section - "We know design" - ->
 <div class="w3-container w3-light-gray w3-grayscale-min" style="padding:40px 16px"  id="port">
   <div class="w3-row-padding"><br>
     <div class="w3-col m6"><div class="w3-center">
@@ -224,13 +204,13 @@ Files & Publications</div>
 <a href="https://www.dropbox.com/sh/a17b3xchllgy4j9/AAA4G9X0O5gAYg0MqqYIc8qva?dl=0"><i class="fa fa-dropbox"></i></a></span></p>
           </div>  </div>
     <div class="w3-col m6">
-     <!--    ================ -->
+     <!--    ================ - ->
 <div class="w3-row w3-hide-small" style="padding-bottom:30px">
 <div class="w3-center">
  <span class="w3-xlarge"><i class="fa fa-youtube-play" style="color:red"></i> Videos</span>
-  <!-- Main video --><p>
+  <!-- Main video - -><p>
 <iframe id="YourID" name="video_feature" width="75%" height="200" src="https://www.youtube.com/embed/uVIjsjr_GVE" frameborder="0"></iframe>
-<!-- Other videos --><br>
+<!-- Other videos - -><br>
 <span class="w3-tag w3-small w3-light-gray"><a id="video_two" href="https://www.youtube.com/embed/fkQYsenF0og" target="video_feature"><b> LDR switch
 </b></a></span>
 <span class="w3-tag w3-small w3-gray"><a id="video_two" href="https://www.youtube.com/embed/KKg15xo4_SA" target="video_feature"><b> W3 University  </b></a></span>
@@ -242,7 +222,7 @@ Files & Publications</div>
 	<span class="w3-tag w3-small w3-gray"> 
 <a id="video_two" href="https://www.youtube.com/embed/takpmt5s5Ho" target="video_feature"><b>PLC - Ταινία Μεταφοράς</b></a></span>
 <br></p></div>
-</div><!--  ---------------------------------- -->
+</div><!--  ---------------------------------- - ->
    </div>
   </div>
  </div> 
@@ -264,7 +244,7 @@ Files & Publications</div>
 </div><br>
 <!-- Promo computerevolution -><div class="w3-container w3-row w3-center w3-blue w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-red"> Publications</span><br><b>“ Η εξέλιξη των Η/Υ ”</b> (από τον άβακα στο Tablet) Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας. <span class="w3-tag w3-small w3-red"><a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-red"><a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><i class="fa fa-slideshare"></i></a></span></div><!-- END Promo  -->
 <!-- Promo fotodiakoptis-->
-<!-- ////////////////////////////////////////////////////////// -->
+<!-- ////////////////////////////////////////////////////////// - ->
 <div class="w3-row">
   <div class="w3-third w3-container w3-red w3-grayscale"><h5>Το κύκλωμα του Φωτοδιακόπτη</h5></div>
   <div class="w3-third w3-container">
@@ -276,8 +256,8 @@ Files & Publications</div>
   </div>
 </div>
 <br>
-<!-- ////////////////////////////////////////////////////////// -->
-<!-- Promo Michatron-->
+<!-- ////////////////////////////////////////////////////////// - ->
+<!-- Promo Michatron- ->
 <div class="w3-row">
   <div class="w3-third w3-container w3-gray w3-grayscale">
     <h5>Μελέτη και Κατασκευή Μichatron</h5>  
@@ -292,8 +272,8 @@ Files & Publications</div>
   </div>
 </div>
 <br>
-<!-- ////////////////////////////////////////////////////////// -->
-<!-- Promo MPPT-->
+<!-- ////////////////////////////////////////////////////////// - ->
+<!-- Promo MPPT- ->
 <div class="w3-row">
   <div class="w3-third w3-container w3-purple w3-grayscale">
     <h5>Τεχνικές MPPT</h5>   
@@ -307,7 +287,7 @@ Files & Publications</div>
   </div>
 </div>
 <br>
-<!-- Promo computerevolution --><div class="w3-container w3-row w3-center w3-green w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-pink"> GAME</span><br><b>“kremaλa”</b> Παιχνίδι σε VisualBasic για PC <span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></span></div><!-- END Promo  -->
+<!-- Promo computerevolution - -><div class="w3-container w3-row w3-center w3-green w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-pink"> GAME</span><br><b>“kremaλa”</b> Παιχνίδι σε VisualBasic για PC <span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></span></div><!-- END Promo  -->
   
 <!--
 <div class="w3-container w3-light-grey w3-grayscale-min" style="padding:40px 16px"  id="port">
@@ -332,35 +312,35 @@ Files & Publications</div>
 <br>} 
 <br>}
 </div>
-<!--  ---------------------------------- -->
+<!--  ---------------------------------- - ->
     </div>
   </div>
 </div>
 <!-- may
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
---><!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  -->
+--><!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  - ->
 <style>footer {background-color: #19273C; color: #4B759B; padding: 10px;}</style>
 <footer class="w3-center"><div class="w3-row"><div class="w3-container w3-half">
 <div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-blue w3-padding-16">You've reached the end!</span></div>
 <a href="#home" class="w3-button w3-hover-blue"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></div>
 <div class="w3-container w3-half"><div class="w3-center w3-padding-32">
 <span class="w3-large w3-bottombar w3-border-blue w3-padding-16">Thanks For Sharing!</span></div><script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55942e200b33038e"></script>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<!-- Go to www.addthis.com/dashboard to customize your tools - ->
 <div class="addthis_inline_share_toolbox"></div></div></div>
-<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Papaspyrou Alexandros" align="bottom">
+<!-- Signature - -><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Papaspyrou Alexandros" align="bottom">
   <style>div.a {font-size: 12px;}</style>
 <div class="a">
 <p><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
 <i class="fa fa-creative-commons"></i>
-2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> | <a href="https://alexandroshub.github.io/tss">TSS</a> |  <!-- android --><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a> 
+2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> | <a href="https://alexandroshub.github.io/tss">TSS</a> |  <!-- android - -><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a> 
 </p></div></footer>
-<!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  --><!-- 
+<!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  - -><!-- 
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
 -->
 
-<!-- ////////// Scripts Zone ////////// -->
+<!-- ////////// Scripts Zone ////////// - ->
 
 <script> // Tabbed Menu
 function openMenu(evt, menuName) {
