--- a/plus.html
+++ b/plus.html
@@ -1,5 +1,5 @@
+<!-- SpecialPage Plus v.alien2
 
-<!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
@@ -19,7 +19,6 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 body, html { height: 100%; line-height: 1.8;}
 .w3-bar .w3-button {padding: 16px;}
-.bgimg { background-position: center; background-size: cover; background-image: url("https://66.media.tumblr.com/4b620392bb4bef6e318f179af05948f0/tumblr_oz7c9bifSb1si59zfo9_1280.jpg"); min-height: 60%;}
 </style>
 <body>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
@@ -38,13 +37,12 @@ body, html { height: 100%; line-height: 1.8;}
   logged_in_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα."
   logged_out_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα.">
 </div>
-<!--  ////////////////////////// messenger_platform  ////////////////////////// -->     
-<!-- //////////////////////////Top menu////////////////////////// -->
+<!--  ////////////////////////// messenger_platform  ////////////////////////// --> <!-- //////////////////////////Top menu v.alien2 *clean* ////////////////////////// -->
 <style>
-.topnav {overflow: hidden; background-color: #19273C;}
+.topnav {overflow: hidden; background-color:rgb(0, 0, 0);}
 .topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
-.topnav a:hover {background-color: #223A2C; color: white;}
-.topnav a.active {background-color: #72c494; color: #D4EDDE;}
+.topnav a:hover {color: white;}
+.topnav a.active {color: #D4EDDE;}
 .topnav .icon {display: none;}
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
@@ -55,7 +53,7 @@ body, html { height: 100%; line-height: 1.8;}
   .topnav.responsive a {float: none; display: block; text-align: left;}}
 </style>
 <div class="topnav" id="myTopnav">
-  <a href="https://alexandroshub.github.io" class="active"  id="home"><b>Alexandros</b>Hub</a>
+  <a href="https://alexandroshub.github.io" class="active"  id="home"><img src= "https://64.media.tumblr.com/5bda3cb7ce87ed9de69c85af725ebe78/f06bf6e1e4ca1249-32/s500x750/68ec78a36cb70324f7aa6a0d7657b46926fc44b2.png" style="width:28px;"></a>
   <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
   <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
   <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
@@ -68,19 +66,19 @@ body, html { height: 100%; line-height: 1.8;}
 function myFunction() {var x = document.getElementById("myTopnav"); if (x.className === "topnav") {x.className += " responsive";} else {x.className = "topnav";}}
 </script>
 <!-- //////////////////////////END of Top menu////////////////////////// -->
-<!-- Header with image -->
+<!--////////// Header with image  v.alien2 *clean* //////////-->
+<style>
+.bgimg { background-position: center; background-size: cover; background-image: url("https://66.media.tumblr.com/4b620392bb4bef6e318f179af05948f0/tumblr_oz7c9bifSb1si59zfo9_1280.jpg"); min-height: 40%;}</style>
 <header class="bgimg w3-display-container" id="home">
- <div class="w3-display-topright w3-padding-large w3-xlarge w3-text-white">LIVE</div>
-  <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
-<span class="w3-tag">By: Papaspyrou Alexandros</span> 
- </div>
+
+<style>#blackgrady {height: 100px; background-image: linear-gradient(to top, rgba(255,0,0,0),rgba(0,0,0,0.7), rgba(0,0,0,1));}</style><div id="blackgrady"></div>
+
   <div class="w3-display-middle w3-center">
 	<span class="w3-text-white w3-hide-small" style="font-size:130px">PLUS</span>
     <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">PLUS</span>
   </div>
-  <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">xxx</span>
-  </div>
+<br/><br/><br/><style>#whitetop2 {height: 50px; background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(255, 255, 255, 1));}</style><div id="whitetop2"></div>
+
 </header>
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-white  w3-large">
@@ -91,22 +89,17 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 <div class="w3-container" id="menu">
   <div class="w3-content" style="max-width:950px">
   <center>
-<!--PODCAST Section //////////////////////////////////////////// -->
-<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">PODCAST</span><span class="w3-tag w3-wide w3-green"><i class="fa fa-podcast"></i></span></h5>
-<div class="w3-center">
-soon</div>
-<!-- ////////////////////////////////////////////////////////// -->
- 
+ <a href="https://alexandroshub.github.io/entertainment" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black">
+          <b>
+            AP <font color="cyan"><i class="fa fa-connectdevelop fa-fw"></i> entertainment</font>
+          </b>
+        </a>
 <!--BLOG Section //////////////////////////////////////////// -->
 <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">BLOG</span><span class="w3-tag w3-wide w3-blue"><i class="fa fa-keyboard-o"></i></span></h5>
 <div class="w3-center">
 <iframe src="https://robodayblog.wordpress.com" height="400" width="75%"></iframe></div>
 <!-- ////////////////////////////////////////////////////////// -->
-<!--TV  Section //////////////////////////////////////////// --> 
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">TV</span><span class="w3-tag w3-wide w3-purple"><i class="fa fa-television"></i></span></h5>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/videoseries?list=PLka3wnglUJjrAhsBA-t2VO9c_Lt-KDUUN" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<!-- ////////////////////////////////////////////////////////// --> 
-<!--PODCAST Section //////////////////////////////////////////// -->
+<!-- Section //////////////////////////////////////////// -->
 <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">Links</span></h5>
 <div class="w3-center">
 <a href="https://alexandroshub.github.io/internetexplorer.html" class="w3-button"><i class="fa fa-external-link w3-margin-right"></i>Load Internet Explorer</a>
@@ -142,36 +135,42 @@ soon</div>
 
 </div>
 <!-- ////////////////////////////////////////////////////////// --> 
-<!--PODCAST Section //////////////////////////////////////////// -->
-<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-red">NEXT</span></h5>
-<div class="w3-center">
-soon</div>
-<!-- ////////////////////////////////////////////////////////// --> 
 </center>
 </div>
 <!-- End page content -->
 </div></div></div></div>
+
+<!-- //////////// preFooter 2020 v.alien2 *clean* //////////////////  -->
+  more [...]
+      <footer style="background-color: #0f1724; color: #d1d3d8;">
+        <style> #preFooterup { height: 30px; background-image: linear-gradient(to top, rgba(255, 0, 0, 0), rgba(241, 241, 241, 1));}</style><div id="preFooterup"></div>
+        
+        <div class="w3-row-padding"><center><p class="w3-tooltip">you have reached the end <br><span class="w3-text w3-tag"><a href="#home"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></span></p></center></div>
+      </footer>
 <!-- 
-   .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
- .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
---><!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  -->
-<style>footer {background-color: #19273C; color: #4B759B; padding: 10px;}</style>
-<footer class="w3-center"><div class="w3-row"><div class="w3-container w3-half">
-<div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-blue w3-padding-16">You've reached the end!</span></div>
-<a href="#home" class="w3-button w3-hover-blue"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></div>
-<div class="w3-container w3-half"><div class="w3-center w3-padding-32">
-<span class="w3-large w3-bottombar w3-border-blue w3-padding-16">Thanks For Sharing!</span></div>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<div class="addthis_inline_share_toolbox"></div></div></div>
-<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Papaspyrou Alexandros" align="bottom">
-  <style>div.a {font-size: 12px;}</style>
-<div class="a">
-<p><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
-<i class="fa fa-creative-commons"></i>
-2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> | <a href="https://alexandroshub.github.io/tss">TSS</a> |  <!-- android --><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a> 
-</p></div></footer>
-<!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  --><!-- 
-   .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
- .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
--->
+      .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
+      .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
+      //////////// Footer 2020    v.alien2 *clean* //////////////////  -->
+   <style>footer {background-color: #19273C; color: #4B759B;}</style>
+   <footer class="w3-center">
+     <style>
+#footy {
+  height: 50px; background-image: linear-gradient(to top, rgba(255,0,0,0), rgba(15,23,36,1));
+}</style><div id="footy"></div>
+      <div class="w3-row">
+      <!--   <p class="w3-tooltip">you have reached the end <br><span class="w3-text w3-tag"><a href="#home"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></span></p> -->
+         <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Papaspyrou Alexandros" align="bottom">
+         <style>div.a {font-size: 12px;}</style>
+         <div class="a">
+            <p>
+               <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
+               <i class="fa fa-creative-commons"></i>2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> | <a href="https://alexandroshub.github.io/tss">TSS</a> |  <!-- android --><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a>
+            </p>
+         </div>
+      </div>
+   </footer>
+   <!-- //////////// Footer 2020 ////////////////  Footer 2020 /////////////
+      .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
+      .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
+      -->
 </body></html>
