--- a/plus.html
+++ b/plus.html
@@ -1,4 +1,4 @@
-<!-- SpecialPage Plus v.alien2
+<!-- SpecialPage Plus v.alien2 + icon
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -9,7 +9,7 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 <!DOCTYPE html>
 <html>
 <title>Papaspyrou | Plus</title>
-<link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
+   <link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -77,7 +77,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 	<span class="w3-text-white w3-hide-small" style="font-size:130px">PLUS</span>
     <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">PLUS</span>
   </div>
-<br/><br/><br/><style>#whitetop2 {height: 50px; background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(255, 255, 255, 1));}</style><div id="whitetop2"></div>
+<br/><br/><br/><br/><br/><br/><br/><style>#whitetop2 {height: 50px; background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(255, 255, 255, 1));}</style><div id="whitetop2"></div>
 
 </header>
 <!-- Add a background color and large text to the whole page -->
