--- a/welcome21.html
+++ b/welcome21.html
@@ -1,4 +1,5 @@
-<!-- SpecialPage WELCOME v.alien2 + icon
+
+<!-- SpecialPage WELCOME v.alien2 + icon /fix/
 
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -26,7 +27,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('https://64.media.tumblr.com/22f322af60457be74e7a6e5d1ecfbd40/373afe46f4cadf41-25/s2048x3072/6a832952d64e4d860a74a68d38f50f984e4300ce.png');
+       background-image: linear-gradient(to right, rgba(255, 0, 0, 0),rgba(0,0,0,0.2), rgba(255, 255, 255, 1)),
+    url('https://64.media.tumblr.com/22f322af60457be74e7a6e5d1ecfbd40/373afe46f4cadf41-25/s2048x3072/6a832952d64e4d860a74a68d38f50f984e4300ce.png');
     min-height: 100%;
     }
   </style>
@@ -34,10 +36,7 @@
   <body>
     <!-- Sidebar with image -->
     <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:30%">
-      <div class="bgimg"><style>
-#blackgrady {
-  height: 645px; background-image: linear-gradient(to right, rgba(255,0,0,0),rgba(0,0,0,0.2), rgba(255,255,255,1));
-}</style><div id="blackgrady"></div></div>
+      <div class="bgimg"></div>
       
     </nav>
     <!-- Hidden Sidebar (reveals when clicked on menu icon)-->
