--- a/index.html
+++ b/index.html
@@ -10,17 +10,8 @@
    <title>AlexandrosHUB | Automations IoT Programming Technology | Personal website of Papaspyrou Alexandros |</title>
    <link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
    <head>
-      <!-- Hotjar Tracking Code for https://alexandroshub.github.io/ -->
-      <script>
-         (function(h,o,t,j,a,r){
-             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-             h._hjSettings={hjid:1806578,hjsv:6};
-             a=o.getElementsByTagName('head')[0];
-             r=o.createElement('script');r.async=1;
-             r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-             a.appendChild(r);
-         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-      </script>
+      <!-- adsense --><script data-ad-client="ca-pub-7491485564227176" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- Hotjar Tracking Code --> <script> (function(h,o,t,j,a,r){ h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)}; h._hjSettings={hjid:1806578,hjsv:6}; a=o.getElementsByTagName('head')[0]; r=o.createElement('script');r.async=1;  r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv; a.appendChild(r); })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv='); </script>
       <!--  /////// meta information  /////// -->
       <meta charset="UTF-8">
       <meta name="author" content="Alexandros Papaspyrou">
@@ -104,7 +95,6 @@
   .topnav.responsive a {float: none; display: block; text-align: left;}}
 </style>
 <div class="topnav" id="myTopnav">
-
   <a href="https://alexandroshub.github.io" class="active"  id="home"><img src= "https://64.media.tumblr.com/5bda3cb7ce87ed9de69c85af725ebe78/f06bf6e1e4ca1249-32/s500x750/68ec78a36cb70324f7aa6a0d7657b46926fc44b2.png" style="width:28px;"></a>
   <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
   <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
