--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
  <!--
   ==========================================================================
 
@@ -579,6 +580,42 @@ Email: <a href="mailto:alexispapy@gmail.com">alexispapy@gmail.com</a>
 </button>
 <div class="panel">
   <p>To robodayblog διατηρεί το δικαίωμα να διαγράψει μερικώς ή ολικώς, για οποιοδήποτε λόγο και χωρίς προηγούμενη ειδοποίηση, οτιδήποτε έχει δημοσιευτεί, χωρίς κανένα περιορισμό. Δημοσιεύματα που περιέχονται στο robodayblog παρέχονται «Ως έχουν» χωρίς καμμίας μορφής εγγύηση για την ορθότητα, η έγκριση για συγκεκριμένη χρήση η προορισμό. Το robodayblog δεν έχει καμμία ευθύνη για την ακρίβεια η πληρότητα των δημοσιευμάτων. Το robodayblog περιέχει συμβουλές, γνώμες, δηλώσεις από διάφορες πηγές. Το robodayblog δεν εκπροσωπεί, αντιπροσωπεύει, ή υιοθετεί ή αποδέχεται ή πιστοποιεί την ακρίβεια ή πιστότητα οποιασδήποτε συμβουλής, γνώμης, δηλώσεως ανεξαρτήτως προέλευσης η πηγής. Η αποδοχή ή/και χρήση συμβουλών, γνωμών, δηλώσεων η οποιασδήποτε άλλης πληροφορίας που δημοσιεύεται στο robodayblog αποτελεί αποκλειστική ευθύνη του ΧΡΗΣΤΗ. Σε περίπτωση που ο ΧΡΗΣΤΗΣ δεν είναι ευχαριστημένος απο τις δυνατότητες, λειτουργίες και δημοσιεύματα στο robodayblog είναι στην αποκλειστική του ευχαίρια να διακόψει τη χρήση του robodayblog . To robodayblog περιέχει και αναφορές σε δικτυακούς τόπους τρίτων. Οι δικτυακοί τόποι τρίτων δεν είναι κάτω απο τον έλεγχο του robodayblog και το robodayblog δεν φέρει καμμία ευθύνη για δημοσιεύματα ή άλλες παραπομπές που αυτοί οι δικτυακοί τόποι περιλαμβάνουν. ΧΡΗΣΤΗΣ είναι οποιοδήποτε ενήλικο φυσικό πρόσωπο που με τη βοήθεια Ηλεκτρονικού Υπολογιστή συνδέεται μέσω Internet και προβάλλει στην οθόνη του τα κείμενα και το περιεχόμενο του robodayblog, ανεξάρτητα αν έχει κάποιο λογαριασμό είτε είναι απλά ανώνυμος επισκέπτης. </p>
+        
+</div>
+
+<button class="accordion2">System requirements
+</button>
+<div class="panel">
+  <p>
+<b>Audio/Video Chat</b><br>
+iOS users must use Safari Browser on mobile for audio/video chat
+Android users must use Chrome Browser on mobile for audio/video chat
+<br><b>Minimum System requirements</b><br>
+2 GB RAM<br>
+2 GB Hard Disk<br>
+4Mbps or 400Kbps Broadband speed<br>
+Dual Core Processor<br>
+Web Browser: Chrome Or Safari OR Firefox<br>
+Keyboard<br>
+Mouse<br>
+Operating System: Windows XP | Windows 10<br>
+Primary Monitor Resolution: 1280 x 720<br>
+Graphic Memory: 64MB<br>
+<br><b>Preferred System requirements</b><br>
+6 GB RAM<br>
+4 GB Hard Disk<br>
+8Mbps or 800Kbps Broadband speed<br>
+Dual Core Processor<br>
+Web browser: Chrome OR Safari OR Firefox<br>
+Keyboard<br>
+Mouse<br>
+Camera<br>
+Microphone<br>
+Speakers (or Headphones)<br>
+Operating System: Windows 10 or Newer<br>
+Primary Monitor Resolution: 1366 x 768<br>
+Display Type: HD Graphics<br>
+Graphic Memory: 64MB</p>
         
 </div>
 
