--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->   
       <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
       <!-- Load Facebook SDK for JavaScript -->
-   <!--      <div id="fb-root"></div>
+         <div id="fb-root"></div>
       <script>(function(d, s, id) {
          var js, fjs = d.getElementsByTagName(s)[0];
          if (d.getElementById(id)) return;
@@ -80,7 +80,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          }(document, 'script', 'facebook-jssdk'));
       </script>
       <!-- Your customer chat code -->
-   <!--      <div class="fb-customerchat"
+         <div class="fb-customerchat"
          attribution=setup_tool
          page_id="1610585155641169"
          theme_color="#72c494"
@@ -147,8 +147,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
                <p id="demo" class="w3-large"></p>
    </body>
    <span class="w3-large" style="background-color: #0033669C; color: #72c494; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Personal website of Papaspyrou Alexandros. All about IoT, Automations, Robotics, projects with arduino or raspberryPi and more...</span>
-   <!--   <p><a href="https://alexandroshub.github.io/liveplus.html" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> TECH <font color="orange"><i class="fa fa-plus"></i> PLUS</font></b></a></p> -->
-   </div> 
+ <p><a href="https://alexandroshub.github.io/welcome21.html" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> read more </b></a></p>    </div> 
    <span class="w3-hide-small">  
    <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
    </div></span>
