--- a/welcome21.html
+++ b/welcome21.html
@@ -47,8 +47,8 @@
       <!-- Header  <h1 class="w3-jumbo"> -->
       <header class="w3-container w3-center" style="padding:25px 16px" id="home">
         <h1><b>Alexandros Papaspyrou</b></h1><h3>Automations</h3>
-   <img src="https://64.media.tumblr.com/7a4c76d4e126f8c37ae749d5e6b20f4d/e344fd49ad83cc3a-aa/s500x750/eef3dac7c9a8fd39aa2ac1dc1f78c66f688f786f.png" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
-        <img src="https://64.media.tumblr.com/7a4c76d4e126f8c37ae749d5e6b20f4d/e344fd49ad83cc3a-aa/s500x750/eef3dac7c9a8fd39aa2ac1dc1f78c66f688f786f.png" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
+	<img src="https://drive.google.com/file/d/17mO9tNe1jnra5c2TzI-ZI3Z65i0e9N71/preview" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
+	<img src="https://drive.google.com/file/d/17mO9tNe1jnra5c2TzI-ZI3Z65i0e9N71/preview" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
         
         
 
