--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
                <p id="demo" class="w3-large"></p>
    </body>
    <span class="w3-large" style="background-color: #0033669C; color: #72c494; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Personal website of Papaspyrou Alexandros. All about IoT, Automations, Robotics, projects with arduino or raspberryPi and more...</span>
- <p><a href="https://alexandroshub.github.io/welcome21.html" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> read more </b></a></p>    </div> 
+ <p><a href="https://alexandroshub.github.io/welcome21.html" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black">
+  <b>Για τη σελίδα.</b></a></p>    </div> 
    <span class="w3-hide-small">  
    <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
    </div></span>
