--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
   <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
   <a href="https://alexandroshub.github.io/contact.html"><i class="far fa-comment"></i>  &nbsp;Contact</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()" aria-label="menu">
     <i class="fa fa-bars"></i>
   </a>
 <!-- covid --><a href="https://alexandroshub.github.io/covid.html" class="w3-padding-large w3-hide-small w3-right"><b><font color="green">
