--- a/port21.html
+++ b/port21.html
@@ -1,18 +1,27 @@
-
-
-<!-- oct 20 -->
-<!-- SpecialPage Portfolio v.alien2
+<!--
+  ==========================================================================
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
-Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ By: Alexandros Papaspyrou
--->
+
+    Alien v2
+    Updated: SpecialPage 'Portfolio' Nov 8, 2020
+    Website: https://alexandroshub.github.io
+    Contact: 	a-papaspyrou@outlook.com.gr
+	CC-BY international 4 2011-2020 Alexandros Papaspyrou
+    
+    
+   Welcome in my personal website 100% HTML Hosted by Github
+   Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou 
+
+  ==========================================================================
+  -->
+  
 <!DOCTYPE html>
 <html>
   <title>Papaspyrou | Portfolio</title>
-  <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png" />
+  <!--/new/--><link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
@@ -66,54 +75,20 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
     ></div>
     <!--  ////////////////////////// messenger_platform  ////////////////////////// -->
     <!-- //////////////////////////Top menu////////////////////////// -->
-    <style>
-      .topnav {
-        overflow: hidden;
-        background-color: rgb(0, 0, 0);
-      }
-      .topnav a {
-        float: left;
-        display: block;
-        color: #4b759b;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-      }
-      .topnav a:hover {
-        color: white;
-      }
-      .topnav a.active {
-        color: #d4edde;
-      }
-      .topnav .icon {
-        display: none;
-      }
-      @media screen and (max-width: 600px) {
-        .topnav a:not(:first-child) {
-          display: none;
-        }
-        .topnav a.icon {
-          float: right;
-          display: block;
-        }
-      }
-      @media screen and (max-width: 600px) {
-        .topnav.responsive {
-          position: relative;
-        }
-        .topnav.responsive .icon {
-          position: absolute;
-          right: 0;
-          top: 0;
-        }
-        .topnav.responsive a {
-          float: none;
-          display: block;
-          text-align: left;
-        }
-      }
-    </style>
+<style>
+.topnav {overflow: hidden; background-color:rgb(0, 0, 0);}
+.topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
+.topnav a:hover {color: white;}
+.topnav a.active {color: #D4EDDE;}
+.topnav .icon {display: none;}
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {float: right; display: block;}}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {position: absolute; right: 0; top: 0;}
+  .topnav.responsive a {float: none; display: block; text-align: left;}}
+</style>
     <div class="topnav" id="myTopnav">
       <a href="https://alexandroshub.github.io" class="active" id="home">
         <img src="https://64.media.tumblr.com/5bda3cb7ce87ed9de69c85af725ebe78/f06bf6e1e4ca1249-32/s500x750/68ec78a36cb70324f7aa6a0d7657b46926fc44b2.png" style="width: 28px;" />
@@ -446,7 +421,7 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 
 <button class="w3-button w3-blue w3-padding-large w3-section"onclick="window.location.href='https://alexandroshub.github.io/arduino';"><b><i class="fas fa-infinity"></i> Arduino</b></button> <button class="w3-button w3-black w3-padding-large w3-section"><b><i class="fas fa-robot"></i> Robotics</b></button>  <button class="w3-button w3-white w3-padding-large w3-section"><b><i class="fas fa-network-wired"></i> IoT</b></button>
  <button class="w3-button w3-orange w3-padding-large w3-section"><b><i class="fas fa-cog"></i> Automations</b></button> </center>
- <button onclick="myFunction()" id="myBtn" class="w3-button w3-purple w3-padding-large w3-section"><b><i class="fas fa-code"></i> Developing</b></button>
+ <button onclick="myFunction2()" id="myBtn" class="w3-button w3-purple w3-padding-large w3-section"><b><i class="fas fa-code"></i> Developing</b></button>
  <span id="dots"></span><span id="more">
  
           <center>
@@ -491,7 +466,7 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 
 
 <script>
-function myFunction() {
+function myFunction2() {
   var dots = document.getElementById("dots");
   var moreText = document.getElementById("more");
   var btnText = document.getElementById("myBtn");
