--- a/about.html
+++ b/about.html
@@ -286,11 +286,15 @@ document.getElementById("datetime").innerHTML = (("0"+dt.getDate()).slice(-2)) +
  
   <!--  <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WELCOME</span></h5>
      -->
-<script async src="https://app.appzi.io/bootstrap/bundle.js?token=g7Yon"></script>
-<!-- End Appzi -->
-
-    
-   
+<!-- <script async src="https://app.appzi.io/bootstrap/bundle.js?token=g7Yon"></script> -->
+<!-- End Appzi -->    
+    <!-- Alert Box -->
+          <div class="w3-container w3-display-container w3-round w3-black w3-border w3-theme-border w3-margin-bottom">
+            <span onclick="this.parentElement.style.display='none'" class="w3-button w3-red w3-display-topright"><i class="fa fa-remove"></i></span>
+            <h3><strong>update</strong></h3>
+            <p> Απο 9/11 αποσύρεται το app της Hotjar και του appzi.
+            </p>
+          </div>
  <p> Με κάθε σας επίσκεψη σε ιστοσελίδα του domain <b><font color="#FF5733">https://alexandroshub.github.io </font></b> , δηλώνετε ότι αποδέχεστε στο σύνολο της Πολιτικής απορρήτου, χρήσης, Cookies και το σύνολο τον διευκρινίσεων, όπως αυτες φαίνονται στο <b><font color="#FF5733">https://alexandroshub.github.io/about </font></b>.
     <br> Οι παρακάτω πολιτικές και όροι ενδέχεται να τροποποιηθούν εάν αυτό κριθεί σκόπιμο η αναγκαίο, οποιαδήποτε στιγμή, με ή χωρίς προειδοποίηση, για οποιοδήποτε ή κανέναν λόγο. Εσείς από την πλευρά σας οφείλετε να τα διαβάζετε σε κάθε σας επίσκεψη.  
     </p> 
