--- a/version.html
+++ b/version.html
@@ -59,6 +59,12 @@
         <p>
         Ο ανανεωμένος σχεδιασμός, το μοναδικό νέο και σύγχρονο περιεχόμενο, η βελτιστοποίηση και ανανέωση του κώδικα, οι εφαρμογές και αλληλεπίδραση που προσφέρεται, η διαρκής εξέλιξη και σταθερή ποιότητα η ακρίβεια και η συνέπεια, η ασφάλεια και η ελευθερία είναι τα συστατικά αυτά που κάνουν και αυτήν την έκδοση της σελίδας καθηλωτική!
 </p>
+        <p>
+          Η συγκεκριμένη έκδοση είναι η καλύτερη σε θέμα σχεδιασμό ασφάλεια λειτουργιών και περιεχομένου από τη στιγμή πού φύγαμε από τις έτοιμες πλατφόρμες όπως yola wix κλπ, αλλά και από τις πρώτες απόπειρες σε δωρεάν servers όπως 000webhost κάτι που μεταξύ άλλων σημαίνει πώς το περιεχόμενο που προβάλλεται δεν έχει υποστεί καμία επεξεργασία από τρίτους. 
+Ένα ακόμα χαρακτηριστικό της νέας έκδοσης στη σελίδα είναι ότι πλέον ελέγχεται και αξιολογείται εσωτερικά και σε πολύ τακτά χρονικά διαστήματα για όλα τα ζητήματα που αναφέρθηκαν νωρίτερα από μεγάλο πλήθος εργαλείων και σκοπός είναι στην αμέσως επόμενη ανανέωση της υπάρχουσας έκδοσης (v3) να υπάρχει η απεικόνιση του μέσου όρου αυτών των αποτελεσμάτων. Αυτό που φαίνεται μέχρι στιγμής είναι όπως η σελίδα έχει πάρα πολύ καλή παρουσίαση θέματα seo, safety, accessibility, καλή εικόνα και σε θέμα χρήσης εργαλείων web, ενώ ακόμα φαίνεται να υστερεί στη γενικότερη παρουσίαση. 
+Όπως έχουμε ξαναπεί πολλές φορές, ο ιστότοπος ανανεώνεται διαρκώς και ακόμα και σε σημείο που υστερούμε πιστεύω πως σύντομα στις αμέσως επόμενες εκδόσεις και ανανεώσεις θα είμαστε πολύ καλύτερα, ελπίζω με περισσότερο και ποιοτικότερο υλικό και περιεχόμενο. 
+Απολαύστε την περιήγηση σας στο site!
+        </p>
  
      
      
