--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
  <title>Papaspyrou | Portfolio</title>
 
-	<meta http-equiv="Refresh" content="2;url=https://alexandroshub.github.io/prtflio.html">
+	<meta http-equiv="Refresh" content="2;url=https://alexandroshub.github.io/portfolio2021.html">
 	
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
    <head>
