--- a/raspberrypi.html
+++ b/raspberrypi.html
@@ -1,4 +1,3 @@
-
 <!-- SpecialPage raspberrypi _V.15.04.20
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -12,7 +11,7 @@ URL:		https://alexandroshub.github.io
 Contact: 	a-papaspyrou@outlook.com.gr-->
 <!DOCTYPE html>
 <html>
-<title>Papaspyrou | Programming | Raspberry pi</title>
+<title>Papaspyrou | Raspberry pi</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -107,64 +106,131 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 </header>
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
-<!-- Menu Container -->
-<div class="w3-container" id="menu">
-  <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide"> dd</span></h5>  
-    <div class="w3-row w3-center w3-card w3-padding">
-      <a href="javascript:void(0)" onclick="openMenu(event, 'Eat');" id="myLink">
-        <div class="w3-col s6 tablink">intro</div>
-      </a>
-      <a href="javascript:void(0)" onclick="openMenu(event, 'Drinks');">
-        <div class="w3-col s6 tablink">links</div>
-      </a>
-    </div>
-    <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
-<p>
-<span class="w3-tag w3-red">Περισσότερα σύντομα!!</span>
-</p>
-    </div>
-    <div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
-      <h5></h5>
-  <p></p>
-  <a href="#" class="w3-button w3-blue">xx</a>
-   <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide"> ΕΓΚΑΤΑΣΤΑΣΗ ΣΕ ΕΙΚΟΝΙΚΟ ΥΠΟΛΟΓΙΣΤΗ</span></h5>  
-<p>  Θα χρειαστούμε
-	α)το virtualbox
-https://www.virtualbox.org/wiki/Downloads
-	β) το λειτουργικό του raspberry για υπολογιστές https://www.raspberrypi.org/downloads/raspberry-pi-desktop/
-    * enable Virtualization
-
-  </p>
-            </div><br>
-            <span class="w3-tag w3-red">Περισσότερα σύντομα!!</span>
-            και μή ξεχνάτε. Αν θέλετε να μοιραστείτε την άποψη σας για το θέμα, ή να προτείνετε κάτι ακόμα, μπορείτε να μας γράψετε στο messenger.
-		</div><br>
-	</div>
 </div>
-<!-- 
-   .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
- .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
---><!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  -->
-<style>footer {background-color: #19273C; color: #4B759B; padding: 10px;}</style>
-<footer class="w3-center"><div class="w3-row"><div class="w3-container w3-half">
-<div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-blue w3-padding-16">You've reached the end!</span></div>
-<a href="#home" class="w3-button w3-hover-blue"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></div>
-<div class="w3-container w3-half"><div class="w3-center w3-padding-32">
-<span class="w3-large w3-bottombar w3-border-blue w3-padding-16">Thanks For Sharing!</span></div>
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55942e200b33038e"></script><!-- Go to www.addthis.com/dashboard to customize your tools -->
-<div class="addthis_inline_share_toolbox"></div></div></div>
-<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Papaspyrou Alexandros" align="bottom">
-  <style>div.a {font-size: 12px;}</style>
-<div class="a">
-<p><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
-<i class="fa fa-creative-commons"></i>
-2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> | <a href="https://alexandroshub.github.io/tss">TSS</a> |  <!-- android --><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a> 
-</p></div></footer>
-<!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  --><!-- 
-   .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
- .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
--->
+
+
+<!-- Area Container -->
+<div class="w3-container" id="where" style="padding-bottom:32px;">
+  <div class="w3-content" style="max-width:700px">
+<br>
+<style>
+.accordion2 {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+
+
+.accordion2:after {
+  content: '\002B';
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active2:after {
+  content: "\2212";
+}
+.active2, .accordion2:hover {
+  background-color: #ccc;
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+</style>
+
+<button class="accordion2">Intro
+</button>
+<div class="panel">
+<center>
+<iframe src="https://player.vimeo.com/video/90103691?autoplay=1" width="85%" height="300" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/90103691">What is a Raspberry Pi?</a> from <a href="https://vimeo.com/raspberrypi">Raspberry Pi</a> on <a href="https://vimeo.com">Vimeo</a></p>
+</center>
+
+<p>
+Το Raspberry Pi είναι ένας μικρός υπολογιστής σε μέγεθος μιας πιστωτικής κάρτας. Δημιουργήθηκε στο Ηνωμένο Βασίλειο από το Raspberry Pi Foundation για την ευκολότερη εκμάθηση της επιστήμης των υπολογιστών  στα σχολεία.
+<br>
+<h3>Ιστορική αναδρομή</h3>
+Η πρώτη γενιά (Raspberry Pi 1 model B) δόθηκε στο κοινό τον Φεβρουάριο του 2012.  Το 2014 κυκλοφόρησε η νέα βελτιωμένη έκδοση του Raspberry Pi 1 η οποία ονομάστηκε RPi 1 model B+. Τον Απρίλιο του 2014 η εταιρία κυκλοφόρησε τον μικρότερο και οικονομικότερο υπολογιστή τσέπης. Το μοντέλο ονομάστηκε Raspberry Pi Zero και είχε κόστος μόλις 5 $. Τον Φεβρουάριο του 2015 κυκλοφόρησε το Raspberry Pi 2 το οποίο είχε την διπλάσια μνήμη RAM από τα προηγούμενα μοντέλα. Φτάνοντας στο σήμερα, τον Φεβρουάριο του 2016, κυκλοφόρησε στο Raspberry Pi 3 Model B το οποίο έχει ενσωματωμένο WiFi και Bluetooth και ακριβώς το ίδιο μέγεθος με το προηγούμενο.
+
+Το δημοφιλέστερο λειτουργικό σύστημα ονομάζεται Raspbian και βασίζεται στο Linux. Επίσης υπάρχουν και άλλα λειτουργικά συστήματα ειδικά σχεδιασμένα για το Raspberry Pi όπως Ubuntu, Windows 10 IOT Core, RISC OS καθώς και διάφορες άλλες εκδόσεις που προσομοιάζουν πλήρως ένα media center σύστημα. 
+
+<hr>
+Η επίσημη σελιδά του  Raspberry Pi είναι: 
+<a href="https://www.raspberrypi.org/">
+www.raspberrypi.org</a><br>
+
+Δείτε <a href="https://magpi.raspberrypi.org/articles/raspberry-pi-3-specs-benchmarks">εδώ</a> benchmarks του RPi 3
+<br>
+<a href="https://en.wikipedia.org/wiki/Raspberry_Pi">
+Πηγή Wikipedia (Διαβάστε περισσότερα εδώ) </a>
+
+<h3>Το λειτουργικό σύστημα Raspbian</h3>
+
+o Raspbian είναι το official λειτουργικό σύστημα του Raspberry Pi και μπορείτε να το κατεβάσετε δωρεάν απ΄ την επίσημη ιστοσελίδα του <a href="https://www.raspberrypi.org/software/operating-systems/">(κλικ εδώ)</a>.
+
+Μπορείτε φυσικά να δοκιμάσετε και άλλα λειτουργικά συστήματα τα οποία είναι συμβατά με αυτό, όπως τα Ubuntu Mate, Snappy Ubuntu Core, Windows 10 IOT και άλλα τα οποία μπορείτε να βρείτε  <a href="https://www.raspberrypi.org/software/">εδώ</a> ή ψάχνοντας στο διαδίκτυο. Τα tutorials που θα βρείτε στο site μας βασίζονται και είναι δοκιμασμένα στο Raspbian OS και ίσως να μην είναι πλήρως συμβατά με το λειτουργικό σύστημα που ίσως επιλέξετε να χρησιμοποιήσετε. Βέβαια επειδή το Raspbian είναι ένα λειτουργικό βασισμένο στα linux, ίσως οι εντολές που θα βρείτε να μπορούν να τρέξουν και σε άλλες εκδόσεις linux, όπως τα Ubuntu Mate. 
+<hr>
+
+<br><br><span class="w3-tag w3-red">Περισσότερα σύντομα!!</span>
+</p>
+</div>
+
+<button class="accordion2">Eγκατάσταση λογισµικού
+</button>
+<div class="panel">
+
+ <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide"> ΕΓΚΑΤΑΣΤΑΣΗ ΣΕ ΕΙΚΟΝΙΚΟ ΥΠΟΛΟΓΙΣΤΗ</span></h5>  
+<p>  Θα χρειαστούμε <b>α)</b> το <a href="https://www.virtualbox.org/wiki/Downloads">
+virtualbox</a>
+
+<b>β)</b> το λειτουργικό του <a href="https://www.raspberrypi.org/downloads/raspberry-pi-desktop/">raspberry για υπολογιστές</a> * enable Virtualization
+
+<br><br><span class="w3-tag w3-red">Περισσότερα σύντομα!!</span>
+</p>
+</div>
+
+<button class="accordion2">Tutorials
+</button>
+<div class="panel">
+
+</div>
+
+
+<script>
+var acc = document.getElementsByClassName("accordion2");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+  acc[i].addEventListener("click", function() {
+    this.classList.toggle("active2");
+    var panel = this.nextElementSibling;
+    if (panel.style.maxHeight) {
+      panel.style.maxHeight = null;
+    } else {
+      panel.style.maxHeight = panel.scrollHeight + "px";
+    } 
+  });
+}
+</script>
+
+</div>
+</div>
+
 <!-- ////////// Scripts Zone ////////// -->
 <!-- googletagmanager -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script>
@@ -187,5 +253,62 @@ function openMenu(evt, menuName) {
 }
 document.getElementById("myLink").click();
 </script>
-
+<!-- //////////// preFooter 2020 v.alien2 *clean* //////////////////  -->
+      <footer style="background-color: #0f1724; color: #d1d3d8;">
+        <style> #preFooterup { height: 30px; background-image: linear-gradient(to top, rgba(255, 0, 0, 0), rgba(241, 241, 241, 1));}</style><div id="preFooterup"></div>
+         <center>
+<p>Αν θέλετε να μοιραστείτε την άποψη σας για το θέμα,<br> ή να προτείνετε κάτι ακόμα, μπορείτε να μας γράψετε στο messenger.</p>
+<i class="fab fa-facebook-messenger"onclick="window.location.href='https://www.messenger.com/t/alexandroshub';" style="cursor:pointer" title="m.me/alexandroshub"></i>
+          </center> 
+     
+      </footer>
+    <!-- 
+      .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
+      .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
+      //////////// Footer 2020 ////////////////  Footer 2020 /////////////  -->
+      <style>
+        footer {
+          background-color: #19273c;
+          color: #4b759b;
+        }
+      </style>
+      <footer class="w3-center">
+        <style>
+          #footy {
+            height: 50px;
+            background-image: linear-gradient(to top, rgba(255, 0, 0, 0), rgba(15, 23, 36, 1));
+          }
+        </style>
+        <div id="footy"></div>
+        <div class="w3-row">
+          <p class="w3-tooltip">
+            you have reached the end <br />
+            <span class="w3-text w3-tag">
+              <a href="#home"  style="text-decoration: none"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
+            </span>
+          </p>
+          <!-- Signature -->
+          <img src="https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width: 340px;" alt="Papaspyrou Alexandros" align="bottom" />
+          <style>
+            div.a {
+              font-size: 12px;
+            }
+          </style>
+          <div class="a">
+            <p>
+              <link
+                href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+                rel="stylesheet"
+                integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg=="
+                crossorigin="anonymous"
+              />
+              <i class="fa fa-creative-commons"></i>2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a>
+            </p>
+          </div>
+        </div>
+      </footer>
+      <!-- //////////// Footer 2020 ////////////////  Footer 2020 /////////////
+      .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
+      .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
+      -->
 </body></html>
